--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "api-forge",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Production-ready REST API with security middleware and MongoDB integration",
+  "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js",
+    "test": "echo \"No tests configured yet\""
+  },
+  "keywords": ["rest", "api", "node", "express", "mongodb"],
+  "author": "Jeswanth Reddy",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.0.0",
     "mongoose": "^9.1.2"
   }
 }
