--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
+    "joi": "^18.0.2",
     "mongoose": "^9.1.2",
     "morgan": "^1.10.1"
   }
