--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development node --watch server.js",
-    "test": "echo \"No tests configured yet\""
+  "dev": "NODE_ENV=development node --watch server.js",
+  "test": "cross-env NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest --runInBand"
   },
   "keywords": [
     "rest",
@@ -27,5 +27,10 @@
     "joi": "^18.0.2",
     "mongoose": "^9.1.2",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
